Don't clip contain:paint when requested to ignore clip

This fixes another place that previously forced clip for contain:paint,
causing corrupted painting in nested contain:paint containers.
Other places were fixed in https://codereview.chromium.org/1985933002.

BUG=648091
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2400063002
Cr-Commit-Position: refs/heads/master@{#423788}

Former-commit-id: 56d8f0dc244d264c3a99d13b6b06f143a81c06d2